mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_missing_pipe.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Unexpected character '|'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_pipe.mux:2:16
   |
 2 | auto opt = int |
   |                ^
   |
= help: Single '|' is not a valid operator. Use '||' for logical OR
